@@ -1,3 +1,6 @@
+2011-01-26  Lorenz Ulrich <lorenz.ulrich@visol.ch>
+	* Fix #17322: DBctrl Icons are not floating
+
 2011-01-25  Dan Osipov <dosipov@phillyburbs.com>
 	* Fix #10408: No replacement of special characters after upload in non-UTF-8-installations (Thanks Lorenz Ulrich)
 	* Fix #15342: Call to deprecated function in class.tx_dam_tcefunc.php (Thanks Lorenz Ulrich)
